Moved Browser state to process so state do not lost when collapsing window, fixed Browser and AppLayout styles

--- a/src/apps/browser/Browser.module.scss
+++ b/src/apps/browser/Browser.module.scss
@@ -11,6 +11,7 @@
 
   width: 100%;
   height: 40px;
+  border-bottom: 1px solid #d3d3d3;
 
   background-color: #ffffff;
 }
@@ -21,9 +22,10 @@
   height: 30px;
   margin: 0 auto;
   border: 0;
+  //border: 1px solid #d9d9d9;
   border-radius: 10px;
   padding: 0 40px;
-  background-color: #e7e7e7;
+  background-color: #f3f3f3;
 
   &:focus {
     outline: 4px solid #2485ff;
@@ -35,4 +37,7 @@
   height: 100%;
 
   background-color: #fff;
+  iframe {
+    border: 0;
+  }
 }
